fix: findAll correct